Cosmetic GUI changes: Reduce label font size in dialogs, enlarge prefs dialog window to fix bad line breaks in prefs dialog.

--- a/pd/nw/css/c64.css
+++ b/pd/nw/css/c64.css
@@ -336,6 +336,7 @@ text {
 
 .dialog_body {
     font-family: "DejaVu Sans", sans-serif;
+    font-size: 10pt;
     background-color: #3e32a2;
 }
 
