--- a/pd/nw/css/default.css
+++ b/pd/nw/css/default.css
@@ -468,6 +468,7 @@ text {
 
 .dialog_body {
     font-family: "DejaVu Sans", sans-serif;
+    font-size: 10pt;
     background-color: #f3f3f3;
 }
 
