--- a/pd/nw/css/strongbad.css
+++ b/pd/nw/css/strongbad.css
@@ -338,6 +338,7 @@ text {
 
 .dialog_body {
     font-family: "DejaVu Sans", sans-serif;
+    font-size: 10pt;
     background-color: #f3f3f3;
 }
 
