--- a/pd/nw/css/subdued.css
+++ b/pd/nw/css/subdued.css
@@ -337,6 +337,7 @@ text {
 
 .dialog_body {
     font-family: "DejaVu Sans", sans-serif;
+    font-size: 10pt;
     background-color: #f3f3f3;
 }
 
