--- a/pd/nw/css/vanilla.css
+++ b/pd/nw/css/vanilla.css
@@ -331,6 +331,7 @@ text {
 
 .dialog_body {
     font-family: "DejaVu Sans", sans-serif;
+    font-size: 10pt;
     background-color: #f3f3f3;
 }
 
