--- a/pd/nw/css/vanilla_inverted.css
+++ b/pd/nw/css/vanilla_inverted.css
@@ -336,6 +336,7 @@ text {
 
 .dialog_body {
     font-family: "DejaVu Sans", sans-serif;
+    font-size: 10pt;
     background-color: #f3f3f3;
 }
 
